Adding On Networks

--- a/src/App.css
+++ b/src/App.css
@@ -113,19 +113,64 @@
   gap: 1rem;
   justify-content: space-around;
 }
-.line1-space{
+
+.line1-space {
   margin-top: 2vh;
 }
-.we-provide{
+
+.we-provide {
   margin-top: 20vh;
 }
-.line2-space{
+
+.line2-space {
   margin-bottom: 30vh;
 }
-.services{
+
+.services {
   margin-bottom: 5vh;
 }
 
+.bg-stars {
+  background-image: url("./Assets/bgStars.svg");
+  background-position: center;
+  background-size: cover;
+}
+
+.bg-3 {
+  background-image: url("./Assets/bg3.svg");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: contain;
+}
+
+.on-networks {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.networks-line2 {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #AAAAAA;
+}
+
+.on-networks{
+  margin-top: 10vh;
+}
+.networks-img{
+  margin-top: 5vh;
+  margin-bottom: 10vh;
+}
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
   .landing-t-size {
@@ -148,17 +193,31 @@
     font-size: 1.5rem;
     line-height: 1.5rem;
   }
-  .line1-space{
+
+  .line1-space {
     margin-top: 5vh;
   }
-  .we-provide{
+
+  .we-provide {
     margin-top: 10vh;
   }
-  .line2-space{
+
+  .line2-space {
     margin-bottom: 10vh;
   }
-  .services{
+
+  .services {
     margin-bottom: 15vh;
+  }
+
+  .on-networks {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+  }
+
+  .networks-line2 {
+    font-size: 1rem;
+    line-height: 1.2rem;
   }
 }
 
@@ -190,6 +249,16 @@
     font-size: 2rem;
     line-height: 2rem;
   }
+
+  .on-networks {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+
+  .networks-line2 {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+  }
 }
 
 /* Media Query for Tablets Ipads portrait mode */
@@ -208,5 +277,5 @@
     line-height: 4rem;
     font-weight: 600;
   }
-  
+
 }
