--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,45 @@
   background-color: black;
 }
 
+.marquee {
+  display: flex;
+  overflow: hidden;
+  user-select: none;
+  gap: var(--gap);
+  mask-image: linear-gradient(var(--mask-direction, to right),
+      hsl(0 0% 0% / 0),
+      hsl(0 0% 0% / 1) 20%,
+      hsl(0 0% 0% / 1) 80%,
+      hsl(0 0% 0% / 0));
+  --size: clamp(10rem, 1rem + 40vmin, 30rem);
+  --gap: calc(var(--size) / 14);
+  --duration: 20s;
+  --scroll-start: 0;
+  --scroll-end: calc(-100% - var(--gap));
+
+}
+
+.marquee__group {
+  flex-shrink: 0;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-around;
+  gap: var(--gap);
+  min-width: 100%;
+  animation: scroll-x var(--duration) linear infinite;
+
+}
+
+@keyframes scroll-x {
+  from {
+    transform: translateX(var(--scroll-start));
+  }
+
+  to {
+    transform: translateX(var(--scroll-end));
+  }
+}
+
 .bg-1 {
   background-image: url("./Assets/bg1.svg");
   background-repeat: no-repeat;
@@ -194,6 +233,22 @@
   background-size: contain;
 }
 
+.our-clients {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  text-align: center;
+  color: #FFFFFF;
+}
+.client-spacer{
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+}
+.iconImages{
+  width: 12.5rem;
+}
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
   .landing-t-size {
@@ -252,6 +307,14 @@
     font-size: 1rem;
     line-height: 1.2rem;
   }
+
+  .our-clients {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+  }
+  .iconImages{
+    width: 8.5rem;
+  }
 }
 
 /* Media Query for low resolution  Tablets, Ipads */
@@ -291,6 +354,14 @@
   .networks-line2 {
     font-size: 1.2rem;
     line-height: 1.5rem;
+  }
+
+  .our-clients {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+  .iconImages{
+    width: 10.5rem;
   }
 }
 
