--- a/src/App.css
+++ b/src/App.css
@@ -157,7 +157,7 @@
   margin-top: 2vh;
 }
 
-.we-provide {
+.we-provide-spacer {
   margin-top: 20vh;
 }
 
@@ -248,6 +248,9 @@
 }
 .iconImages{
   width: 12.5rem;
+}
+.col-gray{
+  color: #AAAAAA;
 }
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
