--- a/src/App.css
+++ b/src/App.css
@@ -247,7 +247,7 @@
   margin-bottom: 10vh;
 }
 .iconImages{
-  width: 12.5rem;
+  height: 12.5rem;
 }
 .col-gray{
   color: #AAAAAA;
@@ -316,7 +316,7 @@
     line-height: 1.5rem;
   }
   .iconImages{
-    width: 8.5rem;
+    height: 8.5rem;
   }
 }
 
@@ -364,7 +364,7 @@
     line-height: 2rem;
   }
   .iconImages{
-    width: 10.5rem;
+    height: 10.5rem;
   }
 }
 
