--- a/src/App.css
+++ b/src/App.css
@@ -252,6 +252,18 @@
 .col-gray{
   color: #AAAAAA;
 }
+.formCont {
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 1px solid gray;
+  outline: 0;
+  font-size: 1.3rem;
+  color: gray;
+  padding: 7px 0;
+  background: transparent;
+  border-radius: 0;
+}
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
   .landing-t-size {
