Fixing mobile width for We provide

--- a/src/App.css
+++ b/src/App.css
@@ -331,7 +331,15 @@
   .line2-space {
     margin-bottom: 10vh;
   }
-
+  .provide-card {
+    width: 8.5rem;
+    height: 8rem;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(12px);
+    border-radius: 0.75rem;
+    font-size: .9rem;
+    text-align: center;
+  }
   .services {
     margin-bottom: 15vh;
   }
