Adding On Scroll Effect

--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,13 @@
   color: #727272;
 }
 
+.nav-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .mission-content {
   font-family: 'Outfit';
   font-style: normal;
